--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*Adicionar as propriedades margin e padding no seletor universal (asterisco) */
+/*Adicionar as propriedades margin e padding no seletor universal (asterisco) */
  *{
      margin: 0;
      padding: 0;
