--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /*Iniciar Seção cabeçalho*/
 
 .cabecalho {
-    background-color: #424661;
+    background-color: #0021f8;
     color: #FFFFFF;
     display: flex;
     justify-content: space-around;
