--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a propriedade display com o valor inline-block:*/
 
 /*Efeito alterar a cor quando passa o mouse*/
 a:hover {
-    color: #16CFF8;
+    color: #0040f1;
 }
 
 /*alterar a cor quando clicar com o mouse*/
