--- a/style.css
+++ b/style.css
@@ -1,92 +1,79 @@
-/*Adicionar as propriedades margin e padding no seletor universal (asterisco) */
-*{
-    margin: 0; /*altera o espaçamento externo*/
-    padding: 0; /*altera o espaçamento interno*/
-}/**/
-
-body {
-    font-family: 'Poppins', sans-serif;
-   
+*{margin: 0;
+    padding: 0;
 }
 
-/*Iniciar Seção cabeçalho*/
-.cabecalho {
-    background-color: #424E61; /*cor de fundo*/
-    color: #ffffff; /*cor*/
-    display: flex; /*propriedade flex para organizar os itens do cabaçalho, lado a lado*/
-    justify-content: space-around; /*alinha as imagens e os textos com espaçamento entre eles*/
-    align-items: center; /*alinhamento de itens centralizado*/
-    padding: 24px 0; /*altera o espaçamento interno*/
+
+.cabecalho{
+    background-color: rgb(255, 255, 255);
+    color: rgb(248, 243, 248);
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;
+}
+
+.cabecalho-titulo{
+    color: #ff00b3;
+    font-style: italic;
+    font-variation-settings:
 }
 
 .cabecalho-imagem{
-    width: 8%; /**/
-    border-radius: 22px; /*para definir bordas arredondadas da imagem*/  
+    width: 8%;
+    border-radius: 22px;
 }
-
-/*A lista não ordenada ul precisa estar alinhada em uma única linha.
-Crie um seletor para a classe .cabecalho-lista-item, adicionando nele 
-a propriedade display com o valor inline-block:*/
-/*Aumente os espaçamentos entre os textos com a propriedade margin de valor 0 16px:*/
-/*Aumente a fonte através da propriedade font-size de valor 24px.*/
 
 .cabecalho-lista-item{
-    display: inline-block; /*o valor inline-block na propriedade display,os item da lista ficam lado a lado*/
-    margin: 0 16px; /**/
-    font-size: 24px; /*tamanho da fonte*/
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
 }
 
-.cabecalho-lista-item a {
-   text-decoration: none; /**/
-   color: #000000;/*cor*/
+.cabecalho-lista-item a{
+    text-decoration: none;
+    color:rgb(245, 128, 198);
 }
 
-/*Efeito alterar a cor quando passa o mouse*/
 a:hover {
-    color:#16a5f8; /*cor*/
+    color: #ff00b3;
 }
 
-/*alterar a cor quando clicar com o mouse*/
 a:active{
-    color:rgb(199, 215, 246); /**/
+    color: rgb(247, 0, 193);
+
 }
 
-/*INICIO SEÇÃO ESCOLA*/
+.escola-imagem{
+    width: 25%;
+    height: 300px;
+    border-radius: 82px;
+}
+
 .escola{
-    background-image: linear-gradient(#16a5f8, #424E61);    /*define um gradiente linear como a imagem de fundo)*/ 
-    color: #000000; /*cor*/
-    display: flex; /*organizar a estrutura do nosso conteúdo*/
-    justify-content: center; /*alinha imagem e os textos com espaçamentos entre eles*/
-    padding: 24px 0; /*Altera o espaçamento interno*/
+    background-image:linear-gradient( #fdfdfd, #f7c9e4) ;
+    color: rgb(253, 6, 109);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
 }
 
 .escola-div-conteudo{
-    width: 45%; /*largura*/
-    color: #000000;/*cor*/ 
+    width: 45%;
 }
 
 .escola-titulo{
-    padding: 24px 0; /*Altera o espaçamento interno,o primeiro valor bordas verticais (superior e inferior) e o 
-    segundo valor bordas horizontais(esquerda e direita)*/
-    font-size: 25px;/*tamanho da fonte*/
+    padding:24px 0;
 }
 
-.escola-texto{
-    font-size: 20px;/*tamanho da fonte*/
-      
+p{
+    padding:0 40px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.imagem-escola{
-     width: 30%; /*largura*/
-     height: 300px;/*altura*/
-     border-radius: 82px; /*para definir bordas arredondadas da imagem*/   
-}
-/*FIM SEÇÃO ESCOLA*/
-
-/*INICIO SEÇÃO ESTUDANTE*/
 .estudante{
-    background-color: #16a5f8;   /* cor de fundo*/
-    color: #000000;/*cor*/
+    color: rgb(253, 6, 109);
+    background-image:linear-gradient( #f7c9e4, #ffffff) ;
 }
 .estudante-titulo{
     padding: 24px 0; /*Altera o espaçamento interno,o primeiro valor bordas verticais (superior e inferior) e o 
@@ -131,7 +118,7 @@ p{
 
 /*SEÇÃO RODAPÉ*/
 .rodape{
-    background-color:  #424E61; /*define um gradiente linear como a imagem de fundo)*/ 
+    background-color:  #ffffff; /*define um gradiente linear como a imagem de fundo)*/ 
 }
 
 .copyright{
@@ -141,65 +128,3 @@ p{
     font-size: 12px;/*tamanho da fonte*/
 }
 /*FIM SEÇÃO RODAPÉ*/
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*Iniciar Seção escola*/
-
-/* crie um seletor (.) para a classe escola-imagem, determinando uma largura width de 25%:*/
-.escola-imagem{
-    width: 25%; /*largura*/
-     height: 300px;/*altura*/
-     border-radius: 82px; /*para definir bordas arredondadas da imagem*/      
-}
-
-/**/
-.escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-
-/**/
-.escola-div-conteudo{
-    width: 45%;
-}
-
-/**/
-.escola-titulo{
-    padding: 24px 0;
-}
-
-/**/
-p{
-    padding: 0 40px; /* alinhar o espaçamento */
-    font-size: 20px;/*tamanho da fonte*/
-    font-family: Arial, Helvetica, sans-serif; /*especifica a fonte de um elemento*/
- }
-
- 
