--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .cabecalho-titulo{
-    color: #ff00b3;
+    color: #0004ff;
     font-style: italic;
     font-variation-settings:
 }
@@ -30,15 +30,15 @@
 
 .cabecalho-lista-item a{
     text-decoration: none;
-    color:rgb(245, 128, 198);
+    color:rgb(140, 128, 245);
 }
 
 a:hover {
-    color: #ff00b3;
+    color: #003cff;
 }
 
 a:active{
-    color: rgb(247, 0, 193);
+    color: rgb(0, 37, 247);
 
 }
 
@@ -50,7 +50,7 @@ a:active{
 
 .escola{
     background-image:linear-gradient( #fdfdfd, #f7c9e4) ;
-    color: rgb(253, 6, 109);
+    color: rgb(80, 6, 253);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,7 +72,7 @@ p{
 }
 
 .estudante{
-    color: rgb(253, 6, 109);
+    color: rgb(142, 6, 253);
     background-image:linear-gradient( #f7c9e4, #ffffff) ;
 }
 .estudante-titulo{
