--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 
 .cabecalho{
-    background-color: rgb(0, 0, 0);
-    color: rgb(26, 1, 26);
+    background-color: rgb(255, 254, 254);
+    color: rgba(255, 255, 255, 0.377);
     display: flex;
     justify-content: space-around;
     padding: 24px 0;
@@ -49,7 +49,7 @@ a:active{
 }
 
 .escola{
-    background-image:linear-gradient( #fdfdfd, #f7c9e4) ;
+    background-image:linear-gradient( #fdfdfd, #9b90ff) ;
     color: rgb(6, 142, 253);
     display: flex;
     justify-content: center;
@@ -73,7 +73,7 @@ p{
 
 .estudante{
     color: rgb(6, 92, 253);
-    background-image:linear-gradient( #000000, #ffffff) ;
+    background-image:linear-gradient( #b69cfd, #ffffff) ;
 }
 .estudante-titulo{
     padding: 24px 0; /*Altera o espaçamento interno,o primeiro valor bordas verticais (superior e inferior) e o 
