--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p{
 
 .estudante{
     color: rgb(6, 92, 253);
-    background-image:linear-gradient( #b69cfd, #ffffff) ;
+    background-image:linear-gradient( #9b90ff, #ffffff) ;
 }
 .estudante-titulo{
     padding: 24px 0; /*Altera o espaçamento interno,o primeiro valor bordas verticais (superior e inferior) e o 
